--- a/firstproj/templates/base.html
+++ b/firstproj/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+{%block head %}
     <meta charset="UTF-8">
     <title>FullCalendar CRUD Operations</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -124,285 +124,11 @@
         }
     </style>
 </head>
-<body class="light-mode">
-<button id="theme-toggle">
-    <span id="theme-icon" class="bi bi-brightness-high"></span>
-</button>
-<button id="logout-button">Logout</button>
-<button id="create-event-button">Create Event</button>
-<div class="container">
-    <h4 style="text-align: center;">FullCalendar CRUD</h4>
-    <div id="calendar"></div>
-</div>
-
-<div id="event-info-dialog">
-    <div class="row">
-        <div class="col-md-6">
-            <label for="event-title">Event Title</label>
-            <input id="event-title" type="text" class="form-control mb-2" placeholder="Event Title">
-        </div>
-        <div class="col-md-6">
-            <label for="event-date">Event Date</label>
-            <input id="event-date" type="date" class="form-control mb-2">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <label for="start-time">Start Time</label>
-            <input id="start-time" type="time" class="form-control mb-2">
-        </div>
-        <div class="col-md-6">
-            <label for="end-time">End Time</label>
-            <input id="end-time" type="time" class="form-control mb-2">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <label for="client-name">Client Name</label>
-            <input id="client-name" type="text" class="form-control mb-2" placeholder="Client Name">
-        </div>
-        <div class="col-md-6">
-            <label for="client-phone">Client Phone Number</label>
-            <input id="client-phone" type="text" class="form-control mb-2" placeholder="Client Phone Number">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <label for="client-address">Client Address</label>
-            <input id="client-address" type="text" class="form-control mb-2" placeholder="Client Address" style="width: 100%;">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <label for="additional-info">Additional Information</label>
-            <textarea id="additional-info" class="form-control mb-2" placeholder="Additional Information" style="width: 100%;"></textarea>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <button class="btn btn-primary" onclick="saveEvent()">Save</button>
-            <button class="btn btn-danger" onclick="deleteEvent()" id="deleteButton">Delete</button>
-            <button class="btn btn-secondary" onclick="closeDialog()">Close</button>
-        </div>
-    </div>
-</div>
-
-<script>
-document.getElementById('logout-button').onclick = function() {
-    window.location.href = "{% url 'logout' %}";
-};
-
-$(document).ready(function() {
-    $('#event-info-dialog').draggable(); // Make the dialog draggable
-
-    var calendar = $('#calendar').fullCalendar({
-        header: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'month,agendaWeek,agendaDay'
-        },
-        events: '/all_events/',
-        selectable: true,
-        selectHelper: true,
-        editable: true,
-        eventLimit: true,
-        select: function (start, end) {
-            var date = moment(start).format('YYYY-MM-DD');
-            var startTime = moment(start).format('HH:mm');
-            var endTime = moment(end).format('HH:mm');
-
-            $('#event-title').val('');
-            $('#event-date').val(date);
-            $('#start-time').val(startTime);
-            $('#end-time').val(endTime);
-            $('#client-name').val('');
-            $('#client-phone').val('');
-            $('#client-address').val('');
-            $('#additional-info').val('');
-            $('#deleteButton').hide();
-            window.currentEvent = { start: start, end: end };
-            $('#event-info-dialog').show().position({
-                my: "left top",
-                at: "left bottom",
-                of: event.target
-            });
-        },
-        eventClick: function (event) {
-            $('#event-title').val(event.title);
-            $('#event-date').val(moment(event.start).format('YYYY-MM-DD'));
-            $('#start-time').val(moment(event.start).format('HH:mm'));
-            $('#end-time').val(moment(event.end).format('HH:mm'));
-            $('#client-name').val(event.client_name || '');
-            $('#client-phone').val(event.client_phone || '');
-            $('#client-address').val(event.client_address || '');
-            $('#additional-info').val(event.additional_info || '');
-            window.currentEvent = event;
-            $('#deleteButton').show();
-            $('#event-info-dialog').show().position({
-                my: "left top",
-                at: "left bottom",
-                of: event.target
-            });
-        },
-        eventRender: function(event, element) {
-            element.css('background-color', '#4285f4');
-            element.css('border-color', '#357ae8');
-            element.css('color', '#ffffff');
-        },
-        eventResize: function (event) {
-            var start = $.fullCalendar.formatDate(event.start, "Y-MM-DD HH:mm:ss");
-            var end = $.fullCalendar.formatDate(event.end, "Y-MM-DD HH:mm:ss");
-            var title = event.title;
-            var id = event.id;
-            $.ajax({
-                type: "POST",
-                url: '/update/',
-                data: {
-                    id: id,
-                    title: title,
-                    start: start,
-                    end: end,
-                    client_name: event.client_name,
-                    client_phone: event.client_phone,
-                    client_address: event.client_address,
-                    additional_info: event.additional_info,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-                },
-                success: function () {
-                    calendar.fullCalendar('refetchEvents');
-                    alert('Event Updated');
-                },
-                error: function () {
-                    alert('There is a problem!!!');
-                }
-            });
-        },
-        eventDrop: function (event) {
-            var start = $.fullCalendar.formatDate(event.start, "Y-MM-DD HH:mm:ss");
-            var end = $.fullCalendar.formatDate(event.end, "Y-MM-DD HH:mm:ss");
-            var title = event.title;
-            var id = event.id;
-            $.ajax({
-                type: "POST",
-                url: '/update/',
-                data: {
-                    id: id,
-                    title: title,
-                    start: start,
-                    end: end,
-                    client_name: event.client_name,
-                    client_phone: event.client_phone,
-                    client_address: event.client_address,
-                    additional_info: event.additional_info,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-                },
-                success: function () {
-                    calendar.fullCalendar('refetchEvents');
-                    alert('Event Updated');
-                },
-                error: function () {
-                    alert('There is a problem!!!');
-                }
-            });
-        }
-    });
-
-    $('#theme-toggle').click(function() {
-        $('body').toggleClass('dark-mode');
-        $('body').toggleClass('light-mode');
-        if ($('body').hasClass('dark-mode')) {
-            $('#theme-icon').removeClass('bi-brightness-high').addClass('bi-moon');
-        } else {
-            $('#theme-icon').removeClass('bi-moon').addClass('bi-brightness-high');
-        }
-    });
-
-    $('#create-event-button').click(function() {
-        var today = moment().format('YYYY-MM-DD');
-        $('#event-title').val('');
-        $('#event-date').val(today);
-        $('#start-time').val('');
-        $('#end-time').val('');
-        $('#client-name').val('');
-        $('#client-phone').val('');
-        $('#client-address').val('');
-        $('#additional-info').val('');
-        $('#deleteButton').hide();
-        window.currentEvent = { start: today, end: today };
-        $('#event-info-dialog').show().position({
-            my: "left top",
-            at: "left bottom",
-            of: this
-        });
-    });
-
-    window.saveEvent = function() {
-        var date = $('#event-date').val();
-        var startTime = $('#start-time').val();
-        var endTime = $('#end-time').val();
-        var startDateTime = date + 'T' + startTime;
-        var endDateTime = endTime ? (date + 'T' + endTime) : startDateTime;
-
-        $.ajax({
-            type: "POST",
-            url: window.currentEvent.id ? '/update/' : '/add_event/',
-            data: {
-                id: window.currentEvent.id,
-                title: $('#event-title').val(),
-                start: startDateTime,
-                end: endDateTime,
-                client_name: $('#client-name').val(),
-                client_phone: $('#client-phone').val(),
-                client_address: $('#client-address').val(),
-                additional_info: $('#additional-info').val(),
-                csrfmiddlewaretoken: '{{ csrf_token }}'
-            },
-            success: function(response) {
-                if (response.status === 'Success') {
-                    $('#event-info-dialog').hide();
-                    $('#calendar').fullCalendar('refetchEvents');
-                    alert(window.currentEvent.id ? 'Event Updated' : 'Event Added');
-                } else {
-                    alert('Failed to save event: ' + response.msg);
-                }
-            },
-            error: function() {
-                alert('Error processing your request.');
-            }
-        });
-    };
-
-    window.deleteEvent = function() {
-        if (confirm("Are you sure you want to delete this event?")) {
-            $.ajax({
-                type: "POST",
-                url: '/remove/',
-                data: {
-                    id: window.currentEvent.id,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-                },
-                success: function(response) {
-                    if (response.status === 'Success') {
-                        $('#event-info-dialog').hide();
-                        $('#calendar').fullCalendar('refetchEvents');
-                        alert('Event Deleted');
-                    } else {
-                        alert('Failed to delete event: ' + response.msg);
-                    }
-                },
-                error: function() {
-                    alert('Error deleting event.');
-                }
-            });
-        }
-    };
-
-    window.closeDialog = function() {
-        $('#event-info-dialog').hide();
-    };
-    
-});
-
-</script>
+{% endblock %}
+<body>
+    {% block body %}
+    {% endblock %}
+    {% block customCalJS %}
+    {% endblock %}
 </body>
 </html>
