--- a/stcalander/templates/index copy.html
+++ b/stcalander/templates/index copy.html
@@ -85,7 +85,7 @@
                 center: 'title',
                 right: 'month,agendaWeek,agendaDay'
             },
-            events: '{% url "all_events" %}',
+            events: '{% url "stcalander:all_events" %}',
             selectable: true,
             selectHelper: true,
             editable: true,
@@ -229,7 +229,7 @@
     
             $.ajax({
                 type: "POST",
-                url: window.currentEvent.id ? "{% url 'update'%}" : "{% url 'add_event' %}",
+                url: window.currentEvent.id ? "{% url 'stcalander:update'%}" : "{% url 'stcalander:add_event' %}",
                 data: {
                     id: window.currentEvent.id,
                     title: $('#event-title').val(),
@@ -260,7 +260,7 @@
             if (confirm("Are you sure you want to delete this event?")) {
                 $.ajax({
                     type: "POST",
-                    url: "{% url 'remove' %}",
+                    url: "{% url 'stcalander:remove' %}",
                     data: {
                         id: window.currentEvent.id,
                         csrfmiddlewaretoken: '{{ csrf_token }}'
