--- a/stcalander/templates/base.html
+++ b/stcalander/templates/base.html
@@ -21,41 +21,14 @@
             max-width: 1000px;
             margin: 0 auto;
         }
-        #logout-button {
-            position: fixed;
-            top: 15px;
-            right: 15px; 
-            z-index: 1000;
-            background: #8b9bae;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        #create-event-button {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            z-index: 1000;
-            background: #394e6e;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
+    
         .fc-header-toolbar {
             margin-bottom: 10px;
             text-align: center;
         }
         .fc-event, .fc-day-grid-event, .fc-time-grid-event, .fc-v-event {
-            background-color: #5e92e4 !important;
-            border-color: #5e92e4 !important;
+            background-color: #375e9b !important;
+            border-color: #375e9b !important;
             color: #ffffff !important;
         }
         .fc-time-grid .fc-event, .fc-axis {
