--- a/stcalander/templates/base.html
+++ b/stcalander/templates/base.html
@@ -27,8 +27,8 @@
             text-align: center;
         }
         .fc-event, .fc-day-grid-event, .fc-time-grid-event, .fc-v-event {
-            background-color: #375e9b !important;
-            border-color: #375e9b !important;
+            background-color: #0dcaf0 !important;
+            border-color: #0dcaf0 !important;
             color: #ffffff !important;
         }
         .fc-time-grid .fc-event, .fc-axis {
